test/tests/stages/14_pointers/valid/libraries/static_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: long_ptr
        None: 
        Pointer: 
          Long: 
        CStatic: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_pointer
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: long_ptr
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Long: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: set_pointer
        List[1]: 
          TIdentifier: new_ptr
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: long_ptr
                    None: 
                  CVar: 
                    TIdentifier: new_ptr
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Long: 
          Int: 
        None: 
