test/tests/stages/14_pointers/invalid_types/assign_int_to_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
